[gd_scene load_steps=6 format=2]

[ext_resource path="res://Theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/TutorialPanel.gd" type="Script" id=2]
[ext_resource path="res://Images/tutorial/house_attack2.PNG" type="Texture" id=3]
[ext_resource path="res://Theme/neighbourhood_font.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.360784, 0.360784, 0.360784, 1 )
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TutorialPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -154.0
margin_right = -27.0
theme = ExtResource( 1 )

[node name="TextLabel" type="Label" parent="TutorialPanel"]
margin_left = 24.0
margin_top = 10.0
margin_right = 852.0
margin_bottom = 140.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/font = ExtResource( 4 )
text = "sdfsdfsdf"
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="TutorialPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -53.0
margin_right = -102.0
margin_bottom = 17.0
text = "NEXT"

[node name="ImagePanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.5
margin_top = -242.5
margin_right = 244.5
margin_bottom = 114.5
custom_styles/panel = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="ImagePanel"]
margin_right = 489.0
margin_bottom = 357.0
texture = ExtResource( 3 )
stretch_mode = 4

[connection signal="button_up" from="TutorialPanel/Button" to="." method="_on_Button_button_up"]
